--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,12 @@ github_username:  jekyll
 
 # Build settings
 markdown: kramdown
-theme: minima
+# Arun: commented the below theme as per the instruction in 
+# https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
+# theme: minima
+# Arun: Using new remote theme - starts
+remote_theme: "mmistakes/minimal-mistakes"
+# Arun: Using new remote theme - starts
 plugins:
   - jekyll-feed
 
